--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="container">
         <!-- 1. شاشة البداية (لعرض قائمة الاختبارات) -->
         <div id="start-screen" class="active">
-            <h1>اختبارات اللغة الإنجليزية</h1>
+            <h1>اختبارات اللغة الإنكليزية</h1>
             <p>اختر اختبارًا من القائمة للبدء.</p>
             <div id="test-list-container">
                 <!-- سيتم ملء هذه القائمة بالاختبارات المتاحة عبر JavaScript -->
@@ -117,3 +117,4 @@
     <script src="script.js"></script>
 </body>
 </html>
+
