--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             <!-- القالب 2: كتابة الكلمة -->
             <div id="writing-template" class="question-template">
                 <h2 id="wr-meaning-text">المعنى بالعربي</h2>
-                <p>اكتب الكلمة الصحيحة باللغة الإنجليزية:</p>
+                <p>اكتب الكلمة الصحيحة باللغة الإنكليزية:</p>
                 <input type="text" id="wr-input" autocomplete="off" autocorrect="off" autocapitalize="off" spellcheck="false">
                 <button id="wr-check-btn">تحقق من الإجابة</button>
                 <p id="wr-feedback"></p>
@@ -117,4 +117,5 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
